third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/display/invalid_casing.rs
#[derive(derive_more::Display)]
#[display(rename_all = "Whatever")]
enum Enum {
    UnitVariant,
}

fn main() {}
